--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test": "react-scripts --openssl-legacy-provider test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
