Treating warnings as errors because of process.env.CI = false issue resolved

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,16 +43,15 @@ jobs:
           fi
 
       - name: Deploy to S3 Bucket
-        uses: jakejarvis/s3-sync-action@v0.5.1
-        with:
-          args: --acl public-read --delete --exact-timestamps
+        - uses: shinyinc/action-aws-cli@v1.2
+        - run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/${{ github.event.inputs.environment }}
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_NAME }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
           source_dir: "build/"
-          dest_dir: "${{ github.event.inputs.environment }}/"
+          # dest_dir: "${{ github.event.inputs.environment }}/"
 
       # - name: Invalidate CloudFront Cache
       #   uses: chetan/invalidate-cloudfront-action@v1.1
